fix: clients grid gap

--- a/css/style.css
+++ b/css/style.css
@@ -148,8 +148,10 @@
 }
 
 .clients {
+  margin-top: 45px;
   display: grid;
   grid-template: repeat(2, 1fr) / repeat(4, 25%);
+  grid-row-gap: 43px;
   text-align: center;
 }
 
